edicion de archivo santi

--- a/index.html
+++ b/index.html
@@ -11,26 +11,32 @@
         <h1>Curriculum Vitae de Bruce Wayne</h1>
         <img src="images/Bruce_Wayne.jpg" />
         <h2>Datos personales</h2>
-        <ul>
-          <li>Nombre completo: <strong>Bruce Wayne</strong></li>
-          <li>Fecha de nacimiento: <strong>1/5/1939</strong></li>
-          <li>Lugar de nacimiento: <strong>Gotham City</strong></li>
-        </ul>
+        <h3>Nombre Completo:</h3>
+        <p>-Bruce Wayne</p>
+        <h3>Fecha De Nacimiento:</h3>
+        <p>-1/mayo/1939</p>
+        <h3>Lugar De Nacimiento:</h3>
+        <p>-Gotham City</p>
+        <h3>Telefono:</h3>
+        <p>-3057978268</p>
+        <hr/>
       </div>
       <div class="profile">
         <h2>Formación académica</h2>
-        <ul>
-          <li>1956-1961: <strong>Universidad del Espantapájaros</strong></li>
-          <li>1952-1956: <strong>Instituto de Dos Caras</strong></li>
-          <li>1944-1952: <strong>Escuela Primaria del Joker</strong></li>
-        </ul>
+        <h3>1956-1961:</h3>
+        <p>-Universidad del Espanta pajaros.</p>
+        <h3>1952-1956:</h3>
+        <p>-Instituto de Dos Caras.</p>
+        <h3>1944-1952:</h3>
+        <p>-Escuela Primaria del Joker.</p>
 
         <h2>Experiencia laboral</h2>
-        <ul>
-          <li>1975-1985: <strong>En el paro</strong></li>
-          <li>1965-1975: <strong>Cazavillanos y demás chusma</strong></li>
-          <li>1962-1965: <strong>Aprendiz de superhéroe</strong></li>
-        </ul>
+        <h3>1975-1985:</h3>
+        <p>-En el paro.</p>
+        <h3>1965-1975:</h3>
+        <p>-Caza villanos y demas chusmas.</p>
+        <h3>1962-1956:</h3>
+        <p>-Aprendiz de super heroe.</p>
       </div>
     </div>
   </body>
